# Survival-Truck

./: .envrc  .envrc.bak  CONTRIBUTING.md  README.md  environment.yml  notes.md  pyproject.toml
.direnv/: poetry.install.stamp  poetry.sync.stamp
config/: hex_layout.json
docs/: hexpath_integration.md  textual_guide.md
examples/: hex_canvas_demo.py  hexpath_demo_axial.py
game/: __init__.py  __main__.py
game/crew/: __init__.py
game/engine/: __init__.py  resource_pipeline.py  turn_engine.py  world.py
game/events/: __init__.py  event_queue.py
game/factions/: __init__.py  ai.py  state.py  trade.py
game/time/: __init__.py  season_tracker.py  weather.py
game/truck/: __init__.py  inventory.py  models.py
game/ui/: __init__.py  app.py  channels.py  config_store.py  control_panel.py  dashboard.py  diplomacy.py  help.py  hex_canvas.py  hex_layout.py  hex_map.py  truck_layout.py
game/world/: __init__.py  config.py  graph.py  persistence.py  rng.py  save_models.py  settlements.py  sites.py  stateframes.py
game/world/map/: __init__.py
survival_truck/: __init__.py  pathfinding.py
survival_truck/hexpath/: __init__.py  astar.py  conversions.py  coords.py  heuristics.py  neighbors.py
survival_truck/widgets/: __init__.py  hex_canvas.py
tests/: test_crew_lifecycle.py  test_diplomacy_phase.py  test_event_queue.py  test_faction_ai.py  test_hex_canvas.py  test_hexpath_astar.py  test_hexpath_coords.py  test_hexpath_heuristics.py  test_hexpath_neighbors.py  test_package_metadata.py  test_pathfinding_adapter.py  test_pep604_annotations.py  test_season_tracker.py  test_truck_inventory.py  test_ui_diplomacy.py  test_ui_hex_canvas_bootstrap.py  test_weather_system.py  test_world_graph.py  test_world_persistence_models.py
tools/codemods/: fix_unions_and_polars.py
