[tool.poetry]
name = "survival-truck"
version = "0.1.0"
description = "Terminal-first survival and logistics simulation game."
authors = ["Survival Truck Developers <devnull@example.com>"]
readme = "README.md"
packages = [
    { include = "game" },
    { include = "survival_truck" },
]
keywords = ["textual", "survival", "tui", "game"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
]

[tool.poetry.urls]
Repository = "https://github.com/survival-truck/Survival-Truck"
Issues = "https://github.com/survival-truck/Survival-Truck/issues"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.60.1"
rich = "^13.8.0"
networkx = "^3.4.2"
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.32"
numpy = "^2.1.1"
opensimplex = "^0.4.5"
pydantic = "^2.9.2"
esper = "^2.5"
msgpack = "^1.0.8"
zstandard = "^0.23.0"
platformdirs = "^4.3.6"
polars = "^1.9.0"
anyio = "^4.6.0"
"backports.tarfile" = { version = "*", markers = "python_version < '3.12'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.9"
mypy = "^1.12.0"
types-setuptools = "^75.6.0.20241025"
types-PyYAML = "^6.0.12.20240917"

[tool.poetry.scripts]
survival-truck = "game.__main__:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# --------------------
# Tooling configuration
# --------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Keep the basics + upgrades; drop ANN (return types) & PLR magic-number/complexity for now.
select = ["E", "F", "I", "UP", "B", "PL"]
ignore = [
  "ANN",      # suppress all annotations rules for now; you can re-enable later
  "PLR2004",  # magic numbers
  "PLR0912",  # too many branches
  "PLR0913",  # too many args
]

[tool.ruff.lint.isort]
known-first-party = ["game"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_any_generics = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "textual.*",
  "rich.*",
  "pytest",
  "opensimplex",
  "sqlalchemy.*",
  "sqlmodel.*",
  "networkx.*",
  "anyio",
  "polars.*",
  "msgpack",
  "esper",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
